random code changes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.1/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.1/mapbox-gl.css' rel='stylesheet' />
   <script src="code.js" charset="utf-8"></script>
-  <!-- <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
-  <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,11 @@
       <div id="globe">
       </div>
     </div>
-    <div id="map"></div>
+    <div id="map">
+    </div>
+    <div id="box">
+      <h1>Settings Go Here</h1>
+    </div>
   </div>
 </body>
 
