--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.1/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.1/mapbox-gl.css' rel='stylesheet' />
+  <!-- <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script> -->
+  <script src='http://mapbox.github.io/csv2geojson/csv2geojson.js'></script>
   <script src="code.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
   <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script>
