--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css' rel='stylesheet' />
   <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
   <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script>
+  <script src="https://raw.github.com/tmcw/csv2geojson/gh-pages/csv2geojson.js"></script>
   <script src="code.js" charset="utf-8"></script>
 </head>
 
