--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>World World for Vizable</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css' rel='stylesheet' />
   <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
@@ -28,9 +30,7 @@
     </div>
     <div id="map">
     </div>
-    <div id="box">
-      <h1>Settings Go Here</h1>
-    </div>
+    <input type="search" id="geocoder">
   </div>
 </body>
 
