--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div id="map">
     </div>
-    <input type="search" id="geocoder">
+    <input type="search" id="geocoder" placeholder="Search for location">
   </div>
 </body>
 
