Finished initial UI

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
   <title>World World for Vizable</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="owl.carousel.css">
+  <link rel="stylesheet" href="owl.theme.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <link rel="stylesheet" href="tinycolorpicker.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="jquery.tinycolorpicker.js"></script>
+  <script src="owl.carousel.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css' rel='stylesheet' />
   <script src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
@@ -32,6 +37,79 @@
     <div id="map">
     </div>
     <input type="search" id="geocoder" placeholder="Search for location">
+    <div id="settings">
+      <div id="Properties">
+        <h2>Properties</h3>
+        <div id="owl-demo" class="owl-carousel owl-theme">
+          <div class="item">
+            <h1>1</h1>
+          </div>
+          <div class="item">
+            <h1>2</h1>
+          </div>
+          <div class="item">
+            <h1>3</h1>
+          </div>
+          <div class="item">
+            <h1>4</h1>
+          </div>
+          <div class="item">
+            <h1>5</h1>
+          </div>
+          <div class="item">
+            <h1>6</h1>
+          </div>
+          <div class="item">
+            <h1>7</h1>
+          </div>
+          <div class="item">
+            <h1>8</h1>
+          </div>
+          <div class="item">
+            <h1>9</h1>
+          </div>
+          <div class="item">
+            <h1>10</h1>
+          </div>
+          <div class="item">
+            <h1>11</h1>
+          </div>
+          <div class="item">
+            <h1>12</h1>
+          </div>
+          <div class="item">
+            <h1>13</h1>
+          </div>
+          <div class="item">
+            <h1>14</h1>
+          </div>
+          <div class="item">
+            <h1>15</h1>
+          </div>
+          <div class="item">
+            <h1>16</h1>
+          </div>
+        </div>
+      </div>
+      <div id="Shelves">
+        <h2>Shelves</h2>
+        <div class="dropzone" id="color">Color</div>
+        <div class="dropzone" id="size">Size</div>
+      </div>
+      <div id="Colorpicker">
+        <h2>Color Picker</h2>
+        <div id="colorPicker1">
+          <a class="color">
+            <div class="colorInner"></div>
+          </a>
+          <div class="track"></div>
+          <ul class="dropdown">
+            <li></li>
+          </ul>
+          <input type="hidden" class="colorInput" />
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
